--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.53.0"
   },
   "devDependencies": {
+    "@svgr/cli": "^6.2.1",
+    "@svgr/webpack": "^6.3.0",
     "@types/node": "^18.0.5",
     "@types/react": "^18.0.15",
     "eslint": "8.20.0",
