--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
     "date-fns": "^2.28.0",
@@ -22,6 +23,7 @@
     "@types/react": "^18.0.15",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "json-server": "^0.17.0",
     "typescript": "^4.7.4"
   }
 }
