--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "next": "12.2.2",
+    "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.53.0"
