--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "json-server server.json -w -d 750 -p 3333"
   },
   "dependencies": {
+    "@tippy.js/react": "^3.1.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "next": "12.2.2",
