--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7",
     "sass": "^1.53.0"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@svgr/webpack": "^6.3.0",
     "@types/node": "^18.0.5",
     "@types/react": "^18.0.15",
+    "@types/react-scroll": "^1.8.4",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "json-server": "^0.17.0",
