--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rc-slider": "^10.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.0-beta.10",
     "react-scroll": "^1.8.7",
     "sass": "^1.53.0"
   },
