--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tippy.js/react": "^3.1.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "rc-slider": "^10.0.1",
     "react": "18.2.0",
